- Removed duplicate 8cols.css - Added the 'section group' to new divs to wrap the columns with "row" as per the docs from the grid system - Targeting the fixed image using a new class instead of the grid system columns which was one of the reasons the float right hack was needed - Removed the float right hack to the col.css and relying on the grid system to structure the page correctly

--- a/css/8cols.css
+++ b/css/8cols.css
@@ -22,7 +22,7 @@
 }
 
 .span_3_of_8 {
-	width: 38.1%;
+	width: 36.5%;
 }
 
 .span_2_of_8 {
@@ -34,7 +34,7 @@
 }
 
 
-/*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
+/*  GO FULL WIDTH AT LESS THAN 768 PIXELS */
 
 @media only screen and (max-width: 768px) {
 	.span_8_of_8 {
