--- a/css/col.css
+++ b/css/col.css
@@ -26,16 +26,17 @@
 
 .col {
 	display: block;
-	float:right;
+	float:left;
+	margin: 1% 0 1% 1.6%;
 }
 
 .col:first-child { margin-left: 0; } /* all browsers except IE6 and lower */
 
 
-/*  REMOVE MARGINS AS ALL GO FULL WIDTH AT 480 PIXELS */
+/*  REMOVE MARGINS AS ALL GO FULL WIDTH AT 768 PIXELS */
 
 @media only screen and (max-width: 768px) {
 	.col { 
-		margin: 0%;
+		margin: 1% 0 1% 0%;
 	}
 }
