--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 		margin:0;
 	}
 
-	h1 {
+	.heading {
 		font-size: 18px;
 		color: #787878;
 		margin: 0 0 0 0;
@@ -58,17 +58,19 @@
 		margin-bottom: 20px;
 	}
 
-	div.col.span_3_of_8 {
-		position: fixed;
+	.fixed-content { 
+		position: fixed; 
+		width: 36.5%;
 		height: 100vh;
-		background-image: url(forest.jpg);
 	}
 
+	.tab { position:relative; }
+
 	@media only screen and (max-width: 768px) {
-		div.col.span_3_of_8 {
+		.fixed-content {
 			position: static;
 			height: 50vh;
-			background-image: url(forest.jpg);
+			width: 100%;
 		}
 
 		div.col.span_2_of_8 {
